--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- Website template by freewebsitetemplates.com -->
-<html>
+<html xmlns:m="http://schemas.microsoft.com/office/2004/12/omml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;" />
@@ -15,6 +15,20 @@
 	<script src="js/png-fix.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/fn.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/mobile.js" type="text/javascript"></script>
+	<style>
+	table, th, td {
+  		border: 2px solid green;
+ 	}
+	.style1 {
+	background-color: #000000;
+}
+.style2 {
+	text-align: left;
+}
+	.style3 {
+	color: #FFFF00;
+}
+	</style>
 </head>
 <body>
 	<div id="page">
@@ -38,71 +52,89 @@
 			<div class="header">
 				<div style="left: 0px; top: 0px">
 					<a href="https://play.google.com/store/apps/details?id=com.lifenet.warship"><img src="images/lifenet_theme.png" alt="" class="satellite"></a>
-					<h1>LIFENET<br>APPS</h1>
-					<h2></h2>
+					<h1 class="style3">LIFENET<br>APPS</h1>
+					<h1></h1>
 					<!--<a href="blog.html" class="more">Read More</a> -->
 					<h1></h1>
-					<ul>
-						<li>
-							<table style="width:100%">
+
+					<table style="width:80%">
 								<tr>
-									<td><a href="https://play.google.com/store/apps/details?id=com.lifenet.deut"><img src="images/deut.png" alt="Go to Playstore"></a></td>
-									<td><div>
-									<p>This is an electronic dictionary of the terms and abbreviations used in the European Union context and jargon. 
+									<td><a href="https://play.google.com/store/apps/details?id=com.lifenet.armyp">
+									<img src="images/army.png" alt="Go to Playstore"></td>
+									<td class="style1">
+									<p class="style2">
+									This App is an Online dictionary containing	the terms and abbreviations used in the 
+									Armies of the World, with many Photos. By using it you can easily learn about army 
+									units, ranks, tactics, technologies,vehicles and weapons. If you are a fan of 
+									weapons and the military, or serve in any Army, this App is for you.
+									For many terms photos are available. Press the “Show” circle and you can see the available photos. 
+									It contains 7200+ terms and it will be continuously updated.</p>
+									</td>
+								</tr>
+								<tr>
+									<td><a href="https://play.google.com/store/apps/details?id=com.lifenet.deut">
+									<img src="images/deut.png" alt="Go to Playstore"></a>
+									</td>
+									<td class="style1">
+									<p class="style2">This is an electronic dictionary of the terms and abbreviations used in the European Union context and jargon. 
 									The search keywords are given in English, and the results are returned also in English.
 									It can be quite useful to all persons involved in European Union organisations and Projects, students and citizens wishing to learn how the European Union functions and what its activities are.
 									It contains 1300 terms and is frequently updated.
-									This is a Free, Online Version, and requires an Internet connection.</p></div>
+									This is an Offline Version, and requires no Internet connection.</p>
 									</td>
 								</tr>
-							</table>							
-						</li>
-						<li>
-							<table style="width:100%">
 								<tr>
-									<td><a href="https://play.google.com/store/apps/details?id=com.lifenet.vehicle"><img src="images/vehicle.png" alt="Go to Playstore"></a></td>
-									<td><div>
-									<p>This is an innovative Online Dictionary of terms used in the automobile industry. If you are an engineer or mechanic then this app is for you.
-									Try it, it is what you need.
-									Most specific technical and engineering meanings are included.
-									Search words and term descriptions are in English.
-									Ιmages of the term explained show up.
-									It is the ultimate tool for car and motorcycle users, fans and engineers.
-									It contains ads.
-									Be one of the lucky ones to get this for free!
-									Don't forget to give us your rating!</p></div>
+									<td><a href="https://play.google.com/store/apps/details?id=com.lifenet.vehiclep">
+									<img src="images/vehicle.png" alt="Go to Playstore"></a>
+									</td>
+									<td class="style1">
+									<p class="style2">This is an innovative 
+									Online Dictionary of terms used in the 
+									automobile industry. If you are an engineer 
+									or mechanic then this app is for you. Try 
+									it, it is what you need. Most specific 
+									technical and engineering meanings are 
+									included. Search words and term descriptions 
+									are in English. Ιmages of the term explained 
+									show up. It is the ultimate tool for car and 
+									motorcycle users, fans and engineers.</p>
 									</td>
 								</tr>
-							</table>
-						</li>
-						<li>
-							<table style="width:100%">
 								<tr>
-									<td><a href="https://play.google.com/store/apps/details?id=com.lifenet.ancattica"><img src="images/ancattica.png" alt="Go to Playstore"></a></td>
-									<td><div>
-									<p>This app contains many photographs and descriptions of the most well known archeological sites of ancient Athens and Attica in Greece.
-									It includes 15 sites. One may choose to read descriptions in Greek, English, German or Spanish.	When the phone is connected to the Internet, it shows ads.</p></div>
+									<td><a href="https://play.google.com/store/apps/details?id=com.lifenet.ancatticap">
+									<img src="images/ancattica.png" alt="Go to Playstore"></a>
+									</td>
+									<td class="style1">
+									<p class="style2">This app contains many 
+									photographs and descriptions of the most 
+									well known archeological sites of ancient 
+									Athens and Attica in Greece. It includes 15 
+									sites. One may choose to read descriptions 
+									in Greek, English, German or Spanish.</p>
 									</td>
 								</tr>
-							</table>
-						</li>
-						<li>
-							<table style="width:100%">
 								<tr>
-									<td><a href="https://play.google.com/store/apps/details?id=com.lifenet.warship"><img src="images/warship.png" alt="Go to Playstore"></a></td>
-									<td><div>
-									<p>This App is an Online dictionary containing the terms and abbreviations used in the military Navies and Warships of the World.
-									By using it you can easily learn about ships, warships, and naval weapons.
-									It also contains common nautical, engineering and shipbuilding terms.
-									If you are a fan of ships and warships, or serve in any Navy, this free App is for you.
-									The words to search, and the term descriptions, are both in English.
-									For many terms photos are available. Press the “Show” circle, and you can see the available photos.
-									The App displays ads.</p></div>
+									<td><a href="https://play.google.com/store/apps/details?id=com.lifenet.warshipp">
+									<img src="images/warship.png" alt="Go to Playstore"></a>
+									</td>
+									<td class="style1">
+									<p class="style2">This App is an Online 
+									dictionary containing the terms and 
+									abbreviations used in the military Navies 
+									and Warships of the World. By using it you 
+									can easily learn about ships, warships, and 
+									naval weapons. It also contains common 
+									nautical, engineering and shipbuilding 
+									terms. If you are a fan of ships and 
+									warships, or serve in any Navy, this free 
+									App is for you. The words to search, and the 
+									term descriptions, are both in English. For 
+									many terms photos are available. Press the 
+									“Show” circle, and you can see the available 
+									photos.</p>
 									</td>
 								</tr>
-							</table>
-						</li>
-					</ul>	
+					</table>
 				</div>
 			</div>
 		</div>
