--- a/about.html
+++ b/about.html
@@ -15,30 +15,14 @@
 			<div>
 				<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
 				<ul id="navigation">
-					<li>
+					<li class="selected">
 						<a href="index.html">Home</a>
 					</li>
-					<li class="selected">
+					<li>
 						<a href="about.html">About</a>
 					</li>
-					<li class="menu">
-						<a href="projects.html">Projects</a>
-						<ul class="primary">
-							<li>
-								<a href="proj1.html">proj 1</a>
-							</li>
-						</ul>
-					</li>
-					<li class="menu">
-						<a href="blog.html">Blog</a>
-						<ul class="secondary">
-							<li>
-								<a href="singlepost.html">Single post</a>
-							</li>
-						</ul>
-					</li>
 					<li>
-						<a href="contact.html">Contact</a>
+						<a href="contact.html">Contact us</a>
 					</li>
 				</ul>
 			</div>
@@ -48,7 +32,11 @@
 				<div>
 					<h1>About</h1>
 					<h2>LIFENET MOBILE APPS</h2>
-					<p>&nbsp;</p>
+					<p>We are a team of experienced information technology 
+					professionals and we started Lifenet in 2019, in Athens, 
+					Greece. Our aim is to create many mobile apps with great 
+					content, which help our users educate themselves in a number 
+					of fields.</p>
 				</div>
 			</div>
 			<div class="body">
