--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<div id="body" class="home">
 			<div class="header">
 				<div style="left: 0px; top: 0px">
-					<a href="https://play.google.com/store/apps/details?id=com.lifenet.warship"><img src="images/lifenet_theme.png" alt="" class="satellite"></a>
+					<a href="https://play.google.com/store/apps/details?id=com.lifenet.armyp"><img src="images/lifenet_theme.png" alt="" class="satellite"></a>
 					<h1 class="style3">LIFENET<br>APPS</h1>
 					<h1></h1>
 					<!--<a href="blog.html" class="more">Read More</a> -->
@@ -60,7 +60,7 @@
 					<table style="width:80%">
 								<tr>
 									<td><a href="https://play.google.com/store/apps/details?id=com.lifenet.armyp">
-									<img src="images/army.png" alt="Go to Playstore"></td>
+									<img src="images/army_256.png" alt="Go to Playstore"></td>
 									<td class="style1">
 									<p class="style2">
 									This App is an Online dictionary containing	the terms and abbreviations used in the 
