--- a/about.html
+++ b/about.html
@@ -63,10 +63,7 @@
 				<div>
 					<h1>FOLLOW OUR MISSIONS ON</h1>
 					<div>
-						<a href="http://freewebsitetemplates.com/go/facebook/" class="facebook">facebook</a>
-						<a href="http://freewebsitetemplates.com/go/twitter/" class="twitter">twitter</a>
-						<a href="http://freewebsitetemplates.com/go/googleplus/" class="googleplus">googleplus</a>
-						<a href="http://freewebsitetemplates.com/go/pinterest/" class="pinterest">pinterest</a>
+						<a href="https://www.facebook.com/Lifenet-Apps-124727202259351/" class="facebook">facebook</a>
 					</div>
 				</div>
 			</div>
