--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <!-- Website template by freewebsitetemplates.com -->
 <html>
 <head>
@@ -15,30 +15,14 @@
 			<div>
 				<a href="index.html" class="logo"><img src="images/logo.png" alt=""></a>
 				<ul id="navigation">
-					<li>
+					<li class="selected">
 						<a href="index.html">Home</a>
 					</li>
 					<li>
 						<a href="about.html">About</a>
 					</li>
-					<li class="menu">
-						<a href="projects.html">Projects</a>
-						<ul class="primary">
-							<li>
-								<a href="proj1.html">proj 1</a>
-							</li>
-						</ul>
-					</li>
-					<li class="menu">
-						<a href="blog.html">Blog</a>
-						<ul class="secondary">
-							<li>
-								<a href="singlepost.html">Single post</a>
-							</li>
-						</ul>
-					</li>
-					<li class="selected">
-						<a href="contact.html">Contact</a>
+					<li>
+						<a href="contact.html">Contact us</a>
 					</li>
 				</ul>
 			</div>
@@ -61,12 +45,9 @@
 		<div id="footer">
 			<div class="connect">
 				<div>
-					<h1>FOLLOW OUR  MISSIONS ON</h1>
+					<h1>FOLLOW US ON</h1>
 					<div>
-						<a href="http://freewebsitetemplates.com/go/facebook/" class="facebook">facebook</a>
-						<a href="http://freewebsitetemplates.com/go/twitter/" class="twitter">twitter</a>
-						<a href="http://freewebsitetemplates.com/go/googleplus/" class="googleplus">googleplus</a>
-						<a href="http://pinterest.com/fwtemplates/" class="pinterest">pinterest</a>
+						<a href="https://www.facebook.com/Lifenet-Apps-124727202259351/" class="facebook">facebook</a>
 					</div>
 				</div>
 			</div>
