--- a/index.html
+++ b/index.html
@@ -56,11 +56,10 @@
 					<h1></h1>
 					<!--<a href="blog.html" class="more">Read More</a> -->
 					<h1></h1>
-
-					<table style="width:90%">
+					<table style="width:100%">
 								<tr>
 									<td><a href="https://play.google.com/store/apps/details?id=com.lifenet.armyp">
-									<img src="images/army_256.png" alt="Go to Playstore"></td>
+									<img src="images/army_256.png" alt="Go to Playstore" width="231" height="144"></td>
 									<td class="style1">
 									<p class="style2">
 									This App is an Online dictionary containing	the terms and abbreviations used in the 
