--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 					<table style="width:100%">
 								<tr>
 									<td><a href="https://play.google.com/store/apps/details?id=com.lifenet.armyp">
-									<img src="images/army_256.png" alt="Go to Playstore" width="231" height="144"></td>
+									<img src="images/army_256.png" alt="Go to Playstore"></a>
+									</td>
 									<td class="style1">
-									<p class="style2">
-									This App is an Online dictionary containing	the terms and abbreviations used in the 
+									<p class="style2">This App is an Online dictionary containing	the terms and abbreviations used in the 
 									Armies of the World, with many Photos. By using it you can easily learn about army 
 									units, ranks, tactics, technologies,vehicles and weapons. If you are a fan of 
 									weapons and the military, or serve in any Army, this App is for you.
@@ -71,7 +71,7 @@
 									</td>
 								</tr>
 								<tr>
-									<td><a href="https://play.google.com/store/apps/details?id=com.lifenet.deut">
+									<td><a href="https://play.google.com/store/apps/details?id=com.lifenet.deutoffline">
 									<img src="images/deut.png" alt="Go to Playstore"></a>
 									</td>
 									<td class="style1">
