--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 	.style3 {
 	color: #FFFF00;
 }
+	.style4 {
+	margin-right: 0px;
+}
 	</style>
 </head>
 <body>
@@ -56,18 +59,21 @@
 					<h1></h1>
 					<!--<a href="blog.html" class="more">Read More</a> -->
 					<h1></h1>
-					<table style="width:100%">
+					<table style="width:90%" class="style4">
 								<tr>
 									<td><a href="https://play.google.com/store/apps/details?id=com.lifenet.armyp">
-									<img src="images/army_256.png" alt="Go to Playstore"></a>
+									<img src="images/army.png" alt="Go to Playstore"></a>
 									</td>
 									<td class="style1">
-									<p class="style2">This App is an Online dictionary containing	the terms and abbreviations used in the 
-									Armies of the World, with many Photos. By using it you can easily learn about army 
-									units, ranks, tactics, technologies,vehicles and weapons. If you are a fan of 
-									weapons and the military, or serve in any Army, this App is for you.
-									For many terms photos are available. Press the “Show” circle and you can see the available photos. 
-									It contains 7200+ terms and it will be continuously updated.</p>
+									<p class="style2">This App is an Online dictionary containing the terms and abbreviations
+									<br> used in the Armies of the World, with many Photos. 
+									<br> By using it you can easily learn about army 
+									units, ranks, tactics, technologies,vehicles and weapons. 
+									<br>If you are a fan of weapons and the military, or serve in any Army, 
+									<br> this App is for you.
+									For many terms photos are available. 
+									<br> Press the “Show” circle and you can see the available photos. 
+									<br> It contains 7200+ terms and it will be continuously updated.</p>
 									</td>
 								</tr>
 								<tr>
