--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 	.style4 {
 	margin-right: 0px;
 }
+	.style5 {
+	text-align: left;
+	margin-bottom: 25px;
+}
 	</style>
 </head>
 <body>
@@ -59,7 +63,7 @@
 					<h1></h1>
 					<!--<a href="blog.html" class="more">Read More</a> -->
 					<h1></h1>
-					<table style="width:90%" class="style4">
+					<table style="width:80%" class="style4">
 								<tr>
 									<td><a href="https://play.google.com/store/apps/details?id=com.lifenet.armyp">
 									<img src="images/army.png" alt="Go to Playstore"></a>
