--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 									<img src="images/army.png" alt="Go to Playstore"></a>
 									</td>
 									<td class="style1">
-									<p class="style2">This App is an Online dictionary containing the terms and abbreviations
+									<p>This App is an Online dictionary containing the terms and abbreviations
 									<br> used in the Armies of the World, with many Photos. 
 									<br> By using it you can easily learn about army 
 									units, ranks, tactics, technologies,vehicles and weapons. 
