--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 									<img src="images/deut.png" alt="Go to Playstore"></a>
 									</td>
 									<td class="style1">
-									<p class="style2">This is an electronic dictionary of the terms and abbreviations used in the European Union context and jargon. 
+									<p>This is an electronic dictionary of the terms and abbreviations used in the European Union context and jargon. 
 									The search keywords are given in English, and the results are returned also in English.
 									It can be quite useful to all persons involved in European Union organisations and Projects, students and citizens wishing to learn how the European Union functions and what its activities are.
 									It contains 1300 terms and is frequently updated.
