--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<script src="js/fn.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/mobile.js" type="text/javascript"></script>
 	<style>
-	table, th, td {
-  		border: 2px solid green;
+	table, td, th {
+  		border: 1px solid
  	}
 	.style1 {
 	background-color: #000000;
@@ -68,7 +68,7 @@
 									<td><a href="https://play.google.com/store/apps/details?id=com.lifenet.armyp">
 									<img src="images/army.png" alt="Go to Playstore"></a>
 									</td>
-									<td>
+									<td class="style1">
 									<p>This App is an Online dictionary containing the terms and abbreviations
 									<br> used in the Armies of the World, with many Photos. 
 									<br> By using it you can easily learn about army 
