--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 	<script src="js/fn.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/mobile.js" type="text/javascript"></script>
 	<style>
-	table, td, th {
-  		border: 1px solid
- 	}
-	.style1 {
+	table {
+    border-top: double;
+    border-bottom: double;
+    border-right: double
+}	.style1 {
 	background-color: #000000;
 }
 .style2 {
