--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 	table {
     border-top: double;
     border-bottom: double;
-    border-right: double
+    border-right: double;
+    overflow:auto
 }	.style1 {
 	background-color: #000000;
 }
