--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     border-top: double;
     border-bottom: double;
     border-right: double;
-    overflow:auto
+    margin-right:auto
 }	.style1 {
 	background-color: #000000;
 }
