--- a/index.html
+++ b/index.html
@@ -16,11 +16,8 @@
 	<script src="js/fn.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/mobile.js" type="text/javascript"></script>
 	<style>
-	table {
-    border-top: double;
-    border-bottom: double;
-    border-right: double;
-    margin-right:auto
+	table, td, th {
+   		border: 1px orange
 }	.style1 {
 	background-color: #000000;
 }
