--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<script src="js/mobile.js" type="text/javascript"></script>
 	<style>
 	table, td, th {
-   		border: 1px orange
+   		border: 1px solid
 }	.style1 {
 	background-color: #000000;
 }
@@ -68,7 +68,7 @@
 									<img src="images/army.png" alt="Go to Playstore"></a>
 									</td>
 									<td class="style1">
-									<p>This App is an Online dictionary containing the terms and abbreviations
+									<p style="width: 674px">This App is an Online dictionary containing the terms and abbreviations
 									<br> used in the Armies of the World, with many Photos. 
 									<br> By using it you can easily learn about army 
 									units, ranks, tactics, technologies,vehicles and weapons. 
@@ -84,7 +84,7 @@
 									<img src="images/deut.png" alt="Go to Playstore"></a>
 									</td>
 									<td class="style1">
-									<p>This is an electronic dictionary of the terms and abbreviations used in the European Union context and jargon. 
+									<p style="width: 677px">This is an electronic dictionary of the terms and abbreviations used in the European Union context and jargon. 
 									The search keywords are given in English, and the results are returned also in English.
 									It can be quite useful to all persons involved in European Union organisations and Projects, students and citizens wishing to learn how the European Union functions and what its activities are.
 									It contains 1300 terms and is frequently updated.
@@ -96,7 +96,7 @@
 									<img src="images/vehicle.png" alt="Go to Playstore"></a>
 									</td>
 									<td class="style1">
-									<p class="style2">This is an innovative 
+									<p class="style2" style="width: 677px">This is an innovative 
 									Online Dictionary of terms used in the 
 									automobile industry. If you are an engineer 
 									or mechanic then this app is for you. Try 
@@ -113,7 +113,7 @@
 									<img src="images/ancattica.png" alt="Go to Playstore"></a>
 									</td>
 									<td class="style1">
-									<p class="style2">This app contains many 
+									<p class="style2" style="width: 678px">This app contains many 
 									photographs and descriptions of the most 
 									well known archeological sites of ancient 
 									Athens and Attica in Greece. It includes 15 
@@ -126,7 +126,7 @@
 									<img src="images/warship.png" alt="Go to Playstore"></a>
 									</td>
 									<td class="style1">
-									<p class="style2">This App is an Online 
+									<p class="style2" style="width: 682px">This App is an Online 
 									dictionary containing the terms and 
 									abbreviations used in the military Navies 
 									and Warships of the World. By using it you 
