--- a/index.html
+++ b/index.html
@@ -69,14 +69,11 @@
 									</td>
 									<td class="style1">
 									<p class="style2" style="width: 682px">This App is an Online dictionary containing the terms and abbreviations
-									<br> used in the Armies of the World, with many Photos. 
-									<br> By using it you can easily learn about army 
-									units, ranks, tactics, technologies,vehicles and weapons. 
-									<br>If you are a fan of weapons and the military, or serve in any Army, 
-									<br> this App is for you.
-									For many terms photos are available. 
-									<br> Press the “Show” circle and you can see the available photos. 
-									<br> It contains 7200+ terms and it will be continuously updated.</p>
+									 used in the Armies of the World, with many Photos. By using it you can easily learn about army 
+									units, ranks, tactics, technologies,vehicles and weapons. If you are a fan of weapons and the military, or serve in any Army, 
+									 this App is for you. For many terms photos are available. 
+									 Press the “Show” circle and you can see the available photos. 
+									 It contains 7200+ terms and it will be continuously updated.</p>
 									</td>
 								</tr>
 								<tr>
