--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
 			</div>
 			<div class="footnote">
 				<div>
-					<p>&copy; 2023 BY SPACE PROSPECTION | ALL RIGHTS RESERVED</p>
+					<p>&copy; 2021 BY LIFENET | ALL RIGHTS RESERVED</p>
 				</div>
 			</div>
 		</div>
