--- a/about.html
+++ b/about.html
@@ -45,23 +45,11 @@
 					<p>&nbsp;</p>
 				</div>
 			</div>
-			<div class="footer">
-				<div>
-					&nbsp;<h2>Be Part of Our Community</h2>
-					<p>&nbsp;</p>
-				</div>
-			</div>
-			<div class="section">
-				<div>
-					<h2>Template Details</h2>
-					<p>&nbsp;</p>
-				</div>
-			</div>
-		</div>
+			
 		<div id="footer">
 			<div class="connect">
 				<div>
-					<h1>FOLLOW OUR MISSIONS ON</h1>
+					<h1>FOLLOW US ON</h1>
 					<div>
 						<a href="https://www.facebook.com/Lifenet-Apps-124727202259351/" class="facebook">facebook</a>
 					</div>
@@ -69,7 +57,7 @@
 			</div>
 			<div class="footnote">
 				<div>
-					<p>&copy; 2023 BY SPACE PROSPECTION | ALL RIGHTS RESERVED</p>
+					<p>&copy; 2021 BY LIFENET | ALL RIGHTS RESERVED</p>
 				</div>
 			</div>
 		</div>
