--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,8 @@
 			<div class="header">
 				<div class="contact">
 					<h1>Contact</h1>
-					<h2>DO NOT HESITATE TO CONTACT US</h2>
-					<h3>Email: lifenetapps@gmail.com</h3>
+					<h2>DO NOT HESITATE TO CONTACT US at email: lifenetapps@gmail.com</h2>
+					
 					<form action="index.html">
 						<input type="text" name="Name" value="Name" onblur="this.value=!this.value?'Name':this.value;" onfocus="this.select()" onclick="this.value='';">
 						<input type="text" name="Email Address" value="Email Address" onblur="this.value=!this.value?'Email Address':this.value;" onfocus="this.select()" onclick="this.value='';">
