--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 			<div class="header">
 				<div class="contact">
 					<h1>Contact</h1>
-					<h2>DO NOT HESITATE TO CONTACT US</h2> 
+					<h2>DO NOT HESITATE TO CONTACT US lifenetapps@gmail.com</h2> 
 					<h3>Email: lifenetapps@gmail.com</h3>
 					
 					<form action="index.html">
