--- a/index.html
+++ b/index.html
@@ -27,13 +27,6 @@
 	.style3 {
 	color: #FFFF00;
 }
-	.style4 {
-	margin-right: 0px;
-}
-	.style5 {
-	text-align: left;
-	margin-bottom: 25px;
-}
 	</style>
 </head>
 <body>
@@ -72,13 +65,12 @@
 									 used in the Armies of the World, with many Photos. By using it you can easily learn about army 
 									units, ranks, tactics, technologies,vehicles and weapons. If you are a fan of weapons and the military, or serve in any Army, 
 									 this App is for you. For many terms photos are available. 
-									 Press the “Show” circle and you can see the available photos. 
 									 It contains 7200+ terms and it will be continuously updated.</p>
 									</td>
 								</tr>
 								<tr>
 									<td><a href="https://play.google.com/store/apps/details?id=com.lifenet.deutoffline">
-									<img src="images/deut.png" alt="Go to Playstore"></a>
+									<img src="images/deut_235x156.png" alt="Go to Playstore"></a>
 									</td>
 									<td class="style1">
 									<p class="style2" style="width: 682px">This is an electronic dictionary of the terms and abbreviations used in the European Union context and jargon. 
@@ -123,20 +115,19 @@
 									<img src="images/warship.png" alt="Go to Playstore"></a>
 									</td>
 									<td class="style1">
-									<p class="style2" style="width: 682px">This App is an Online 
-									dictionary containing the terms and 
-									abbreviations used in the military Navies 
-									and Warships of the World. By using it you 
-									can easily learn about ships, warships, and 
-									naval weapons. It also contains common 
-									nautical, engineering and shipbuilding 
-									terms. If you are a fan of ships and 
-									warships, or serve in any Navy, this free 
-									App is for you. The words to search, and the 
-									term descriptions, are both in English. For 
-									many terms photos are available. Press the 
-									“Show” circle, and you can see the available 
-									photos.</p>
+									<p class="style2" style="width: 682px">This 
+									App is an Online dictionary containing the 
+									terms and abbreviations used in the military 
+									Navies and Warships of the World. By using 
+									it you can easily learn about ships, 
+									warships, and naval weapons. It also 
+									contains common nautical, engineering and 
+									shipbuilding terms. If you are a fan of 
+									ships and warships, or serve in any Navy, 
+									this App is for you. The words to search, 
+									and the term descriptions, are both in 
+									English. For many terms photos are 
+									available. </p>
 									</td>
 								</tr>
 					</table>
