--- a/about.html
+++ b/about.html
@@ -4,10 +4,19 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;" />
-	<title>about - Lifenet Apps</title>
+	<title>About</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script src="js/mobile.js" type="text/javascript"></script>
+	<style type="text/css">
+.style1 {
+	font-size: large;
+	color: #FFFF00;
+}
+.style2 {
+	color: #FFFF00;
+}
+</style>
 </head>
 <body>
 	<div id="page">
@@ -43,7 +52,9 @@
 				<div>
 					&nbsp;<h2>&nbsp;</h2>
 					<p>&nbsp;</p>
-				</div>
+					<span class="style1"><strong>
+					<a href="Privacy_Policy_Lifenet.html"><span class="style2">
+					Privacy Policy</span></a></strong></span></div>
 			</div>
 			
 		<div id="footer">
